log/log.txt
Traceback (most recent call last):
  File "C:\Users\Nico\aus\RPA_Challenge\database.py", line 15, in connect_db
    db_cursor.execute(open("scripts/create_tables.sql", "r").read())
psycopg2.errors.SyntaxError: error de sintaxis en o cerca de «(»
LINE 6:     PRIMARY KEY (id)
                        ^

Traceback (most recent call last):
  File "C:\Users\Nico\aus\RPA_Challenge\database.py", line 17, in connect_db
    cursor.execute(open("scripts/create_tables.sql","r").read())
psycopg2.errors.SyntaxError: error de sintaxis en o cerca de «IF»
LINE 1: IF OBJECT_ID('Datos', 'U') IS NOT NULL
        ^

Traceback (most recent call last):
  File "C:\Users\Nico\aus\RPA_Challenge\database.py", line 17, in connect_db
    cursor.execute(open("scripts/create_tables.sql","r").read())
psycopg2.errors.UndefinedTable: no existe la tabla «datos»

Traceback (most recent call last):
  File "C:\Users\Nico\aus\RPA_Challenge\database.py", line 19, in connect_db
    with conn.cursor() as db_cursor:
NameError: name 'conn' is not defined
